@@ -106,20 +106,25 @@ def check_mem_windows(item, params, info):
         infotext = "%s usage: %.1f%% (%.1f/%.1f GB)" % \
                 (title, perc, used_kb / MB, total_kb / MB)
 
-        warn, crit = params[paramname]
+        if type(params[paramname]) == tuple:
+            warn, crit = params[paramname]
 
-        # In perfdata show warn/crit as absolute values
-        if type(warn) == float:
-            warn_kb = total_kb * warn / 100 / 1024
+            # In perfdata show warn/crit as absolute values
+            if type(warn) == float:
+                warn_kb = total_kb * warn / 100 / 1024
+            else:
+                warn_kb = warn * 1024
+
+            if type(crit) == float:
+                crit_kb = total_kb * crit / 100 / 1024
+            else:
+                crit_kb = crit * 1024
+
+            perfdata = [(paramname, used_kb / 1024.0, warn_kb, crit_kb, 0, total_kb / 1024.0)]
+
+        # Predictive levels have no level information in the performance data
         else:
-            warn_kb = warn * 1024
-
-        if type(crit) == float:
-            crit_kb = total_kb * crit / 100 / 1024
-        else:
-            crit_kb = crit * 1024
-
-        perfdata = [(paramname, used_kb / 1024.0, warn_kb, crit_kb, 0, total_kb / 1024.0)]
+            perfdata = [(paramname, used_kb / 1024.0, None, None, 0, total_kb / 1024.0)]
 
         # Do averaging, if configured, just for matching the levels
         if "average" in params:
@@ -129,18 +134,32 @@ def check_mem_windows(item, params, info):
             used_mb  = used_kb / 1024.0
             free_mb  = (total_kb / 1024.0) - used_mb
             perc     = 100.0 * used_kb / total_kb
-            infotxts[-1] += ", %d min average: %.1f%% (%.1f GB)" % (average_min, perc, used_kb / MB)
+            infotext += ", %d min average: %.1f%% (%.1f GB)" % (average_min, perc, used_kb / MB)
             perfdata.append((paramname + "_avg", used_kb / 1024.0))
 
         # Now check the levels
-        if (type(crit) == int and free_mb <= crit) or \
-            (type(crit) == float and perc >= crit):
-            state = 2
-        elif (type(warn) == int and free_mb <= warn) or \
-            (type(warn) == float and perc >= warn):
-            state = 1
+        if type(params[paramname]) == tuple:
+            if (type(crit) == int and free_mb <= crit) or \
+                (type(crit) == float and perc >= crit):
+                state = 2
+            elif (type(warn) == int and free_mb <= warn) or \
+                (type(warn) == float and perc >= warn):
+                state = 1
+            else:
+                state = 0
+
+        # Predictive levels
         else:
-            state = 0
+            state, infoadd, perfadd = check_levels(
+                used_kb,                                                     # Current value
+                "average" in params and paramname + "_avg" or paramname,     # Name of RRD variable
+                params[paramname],
+                unit = "GB",                                                 # Levels are specified in GB...
+                factor = 1024 * 1024 * 1024.0,                               # ... in WATO ValueSpec
+            )
+            if infoadd:
+                infotext += ", " + infoadd
+            perfdata += perfadd
 
         yield state, infotext, perfdata
 
