@@ -14760,6 +14760,10 @@ def register_notification_parameters(scriptname, valuespec):
 # can be used like one (but take no parameters)
 def PredictiveLevels(**args):
     dif = args.get("default_difference", (2.0, 4.0))
+    unitname = args.get("unit", "")
+    if unitname:
+        unitname += " "
+
     return Dictionary(
         title = _("Predictive Levels"),
         optional_keys = [ "weight", "levels_upper", "levels_upper_min", "levels_lower", "levels_lower_max" ],
@@ -14798,8 +14802,10 @@ def PredictiveLevels(**args):
                          _("Absolute difference from prediction"),
                          Tuple(
                              elements = [
-                                 Float(title = _("Warning at"), unit = _("above predicted value"), default_value = dif[0]),
-                                 Float(title = _("Critical at"), unit = _("above predicted value"), default_value = dif[1]),
+                                 Float(title = _("Warning at"),
+                                       unit = unitname + _("above predicted value"), default_value = dif[0]),
+                                 Float(title = _("Critical at"),
+                                       unit = unitname + _("above predicted value"), default_value = dif[1]),
                              ]
                       )),
                       ( "relative",
@@ -14827,8 +14833,8 @@ def PredictiveLevels(**args):
                              "the will never be set below the following limits. This avoids false alarms "
                              "during times where the predicted levels would be very low."),
                     elements = [
-                        Float(title = _("Warning level is at least")),
-                        Float(title = _("Critical level is at least")),
+                        Float(title = _("Warning level is at least"), unit = unitname),
+                        Float(title = _("Critical level is at least"), unit = unitname),
                     ]
               )),
              ( "levels_lower",
@@ -14839,8 +14845,10 @@ def PredictiveLevels(**args):
                          _("Absolute difference from prediction"),
                          Tuple(
                              elements = [
-                                 Float(title = _("Warning at"), unit = _("below predicted value"), default_value = 2.0),
-                                 Float(title = _("Critical at"), unit = _("below predicted value"), default_value = 4.0),
+                                 Float(title = _("Warning at"),
+                                       unit = unitname + _("below predicted value"), default_value = 2.0),
+                                 Float(title = _("Critical at"),
+                                       unit = unitname + _("below predicted value"), default_value = 4.0),
                              ]
                       )),
                       ( "relative",
